gccida/c2/gen_lowpart_for_combine
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10227:31: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  gen_lowpart_for_combine( machine_mode mode, rtx x) 
                              ^
                              enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10232:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10232:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10237:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10251:34: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_e( CLOBBER, ( machine_mode)v4, v9); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10255:1: error: use of undeclared identifier 'result'
result = rtx->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10256:37: error: use of undeclared identifier 'result'
if ( ( unsigned __int16)*( _DWORD *)result == 66 ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10259:43: error: use of undeclared identifier 'result'
if ( ( unsigned __int8)BYTE2( *( _DWORD *)result) == mode ) 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10260:8: error: use of undeclared identifier 'result'
return result; 
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10263:1: error: use of undeclared identifier 'result'
result = gen_lowpart_common( mode, rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10264:6: error: use of undeclared identifier 'result'
if ( result ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10265:8: error: use of undeclared identifier 'result'
return result; 
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10285:26: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
return gen_rtx_fmt_ee( ( rtx_code)( unsigned __int16)*( _DWORD *)rtx, mode, rtx->fld[0].rtx, *( rtx *)&rtx[1]); 
                         ^~~~~~~~
                         rtx_cost
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10285:37: error: expected expression
return gen_rtx_fmt_ee( ( rtx_code)( unsigned __int16)*( _DWORD *)rtx, mode, rtx->fld[0].rtx, *( rtx *)&rtx[1]); 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10285:102: error: expected expression
return gen_rtx_fmt_ee( ( rtx_code)( unsigned __int16)*( _DWORD *)rtx, mode, rtx->fld[0].rtx, *( rtx *)&rtx[1]); 
                                                                                                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10290:1: error: use of undeclared identifier 'result'
result = simplify_gen_subreg( mode, rtx, ( machine_mode)*( ( unsigned __int8 *)rtx + 2), v11); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10290:44: error: use of undeclared identifier 'machine_mode'
result = simplify_gen_subreg( mode, rtx, ( machine_mode)*( ( unsigned __int8 *)rtx + 2), v11); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10291:7: error: use of undeclared identifier 'result'
if ( !result ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/combine.c:10296:34: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_e( CLOBBER, ( machine_mode)v4, v9); 
                                 ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lowpart_for_combine/src/obj/combine.o] Error 1
